Fixed word-wrapping on long URLs and code font in the preview

--- a/frontend/css/app.scss
+++ b/frontend/css/app.scss
@@ -275,6 +275,7 @@
             max-width: $maxPanelWidth;
             margin:0 auto;/* Overflow fix */
             padding-bottom: $marginExtraLarge;
+            word-wrap: break-word;
 
             h1{font-weight:$fontWeightHeavy; font-size:3em; margin:$marginNormal 0; color:$colorTextHeavy; line-height:1.25em}
             h2, h3, h4, h5{font-weight:$fontWeightHeavy; color:$colorTextNormal;}
@@ -288,8 +289,9 @@
             hr{border:0;border-top:1px solid $colorBorderLight;margin:$marginExtraLarge 0;}
             img{max-width: 100%}
             li>ul, li>ol{margin:0;}
+            pre, code{font-family: 'Roboto Mono', monospace; font-size: 12px}
             pre{margin:0.5em 0;}
-                pre>code{padding:$marginExtraSmall $marginSmall;border:0;background:#eee!important;overflow:auto;background:#fff;font-size: 13px;border-radius:0;width:100%;box-sizing:border-box;}
+                pre>code{padding:$marginExtraSmall $marginSmall;border:0;background:#eee!important;overflow:auto;background:#fff;border-radius:0;width:100%;box-sizing:border-box;}
             p{margin:0.5em 0;font-size:inherit;}
             table{border-collapse:collapse;}
                 th, td{border:1px solid $colorBorderLight;padding:3px 5px;}
